maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def garM(c:Int):Int { if (aMurD()) {if (estFaceMur()) {gauche(); return c+1} else {avance();return c}} else {droite();avance();return c-1}
                      ^Escaper:12: error: ')' expected but '}' found.
  while (getY()!=0) {var c = 0;setDirection(Direction.NORTH);while (!estFaceMur()) {avance()};while (getY() !=0 && (c!=0||getDirection = Direction.NORTH) {c=garM(c)}};while (!estSurBiscuit()) {c=garM(c)};prendBiscuit()} 
                                                                                                                                                                     ^